--- a/nextcloud-vol-db.yaml
+++ b/nextcloud-vol-db.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: PersistentVolumeClaim     # < Volume used by nextcloud-db
+metadata:
+  name: nextcloud-db-pvc        # < Volume Claim Name / It will be required 
+  namespace: storage-cloud
+spec:
+  accessModes:
+    - ReadWriteOnce             # < Only one node can write
+  storageClassName: longhorn    # < To use the longhorn StorageClass
+  resources:
+    requests:
+      storage: 8Gi              # < Volume size
+---
 apiVersion: apps/v1
 kind: StatefulSet      # < kind of installation (statefulset vs Deployment)
 metadata:
@@ -26,10 +39,10 @@ spec:
         image: linuxserver/mariadb
         imagePullPolicy: Always
         env:                               # < environment variables. See https://hub.docker.com/r/linuxserver/mariadb
-        #- name: PGID
-        #  value: "100" # < group "user"     
-        #- name: PUID                       
-        #  value: "1041" # < user "docker"
+        - name: PGID
+          value: "100" # < group "user"     
+        - name: PUID                       
+          value: "1001" # < user "docker"
         - name: TZ
           value: Europe/Amsterdam          
         - name: MYSQL_DATABASE
@@ -53,4 +66,4 @@ spec:
   ports:
     - name: mysql
       protocol: TCP
-      port: 3306                      # < Port that this service listen to and then uses to connect with the statefulset
+      port: 3306
